[tool.poetry]
name = "Articuno"
version = "v5.1.7"
description = "A fun Discord Bot, written with interactions.py."
license = "GPL-3.0-only"
authors = ["B1ue-Dev <b1uedev@duck.com>"]
readme = "README.md"
homepage = "https://blue.is-a.dev/Articuno"
repository = "https://github.com/B1ue-Dev/Articuno"

[tool.poetry.dependencies]
python = "^3.10.0"
python-dotenv = "0.19.2"
discord-py-interactions = { git = "https://github.com/AstreaTSS/interactions-py-library.git@hybrid-commands-v2" }
google-api-python-client = "2.64.0"
googletrans = "3.1.0a0"
Pillow = "9.2.0"
psutil = "5.9.2"
pyfiglet = "0.8.post1"
requests = "2.28.1"
bardapi = "0.1.22"

[tool.black]
line-length = 79

[tool.poetry.dev-dependencies]
flake8 = "6.0.0"
black = "23.3.0"
poetry = "1.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
