[tool.poetry]
name = "Articuno"
version = "v5.3.2"
description = "A fun Discord Bot, written with interactions.py."
license = "GPL-3.0-only"
authors = ["B1ue-Dev <b1uedev@duck.com>"]
readme = "README.md"
homepage = "https://blue.is-a.dev/Articuno"
repository = "https://github.com/B1ue-Dev/Articuno"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
beanie = "1.21.0"
colorlog = "6.7.0"
discord-py-interactions = "5.9.2"
google-api-python-client = "2.97.0"
googletrans-py = "4.0.0"
Pillow = "9.5.0"
psutil = "5.9.5"
pyfiglet = "0.8.post1"
python-dotenv = "1.0.0"

[tool.black]
line-length = 79

[tool.poetry.dev-dependencies]
flake8 = "6.0.0"
black = "23.3.0"
poetry = "1.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
